# renamebyreplace

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  renamebyreplace  setup.py
.github/workflows/: tests.yml
doc/: Doxyfile  command.tape  howto.tape  index.dox
doc/ttyrec/: howto.py
locale/: es.po  es.po~  fr.po  fr.po~  renamebyreplace.pot
man/es/man1/: renamebyreplace.1
man/fr/man1/: renamebyreplace.1
man/man1/: renamebyreplace.1
renamebyreplace/: __init__.py  core.py  poethepoet.py  renamebyreplace  version.py
renamebyreplace/locale/: es.po  fr.po  renamebyreplace.pot
renamebyreplace/locale/es/LC_MESSAGES/: renamebyreplace.mo
renamebyreplace/locale/fr/LC_MESSAGES/: renamebyreplace.mo
renamebyreplace/tests/: test_core.py
